5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1637_2445.log
== TEST (2019-04-11 11:57:29) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(f)
else:
	c = 5/9*(temp-32)
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    temp = 5/9*(f-32)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:58:31) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(round(f, 2))
else:
	c = 5/9*(temp-32)
	print(round(c, 2))

-- EXECUTION TIME:
0.167983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 4, in <module>
    temp = 5/9*(f-32)
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:58:35) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(round(f, 2))
else:
	c = 5/9*(temp-32)
	print(round(c, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    temp = 5/9*(f-32)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:59:18) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(round(f, 2))
else(esc=="F"):
	c = 5/9*(temp-32)
	print(round(c, 2))

-- EXECUTION TIME:
0.148209
-- ERROR:
  File "/home/codebench/codes/1637/2445/main.py", line 6
    else(esc=="F"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:59:21) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(round(f, 2))
else(esc=="F"):
	c = 5/9*(temp-32)
	print(round(c, 2))

-- EXECUTION TIME:
0.182935
-- ERROR:
  File "/home/codebench/codes/1637/2445/main.py", line 6
    else(esc=="F"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:22) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp = 5/9*(f-32)
	print(round(f, 2))
else(esc=="F"):
	c = 5/9*(temp-32)
	print(round(c, 2))

-- ERROR:
File "XXXX", line 6
    else(esc=="F"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:00:05) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	temp == 5/9*(f-32)
	print(round(f, 2))
else:
	c = 5/9*(temp-32)
	print(round(c, 2))

-- EXECUTION TIME:
0.235861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 4, in <module>
    temp == 5/9*(f-32)
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:49:11) 
-- CODE:
esc = input("escala: ").upper()
temp = float(input("temperatura: "))
if(esc=="C"):
	f= temp*9/5+32
	print(round(f, 2))
else:
	c = 5/9*(temp-32)
	print(round(c, 2))

-- EXECUTION TIME:
0.233983
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
